# texteditor

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_direct.bat  editor.c
docs/: implementation.md
include/: control.h  editor.h  fileops.h  window.h
src/: control.c  fileops.c  main.c  window.c
